--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 
 # Created by https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,python,pycharm,windows,visualstudio,visualstudiocode
-
+.gitignore
 ### OSX ###
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
-
+example.py
 # Icon must end with two \r
 Icon
 config.py
