--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 aniso8601==9.0.1
-attrs==22.2.0
-beautifulsoup4==4.12.0
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
 bs4==0.0.1
-certifi==2022.12.7
+certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
-Flask==2.2.3
+Flask==2.3.2
 flask-restx==1.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
-librus-apix==0.2.3
+librus-apix==0.3.1
 lxml==4.9.2
 MarkupSafe==2.1.2
 pyrsistent==0.19.3
 pytz==2023.3
-requests==2.28.2
-soupsieve==2.4
-urllib3==1.26.15
-Werkzeug==2.2.3
+requests==2.30.0
+soupsieve==2.4.1
+urllib3==2.0.2
+Werkzeug==2.3.4
