--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,48 @@ beautifulsoup4==4.12.2
 blinker==1.6.2
 bs4==0.0.1
 certifi==2023.5.7
+cffi==1.16.0
 charset-normalizer==3.1.0
 click==8.1.3
+cryptography==41.0.5
+docutils==0.20.1
+exceptiongroup==1.2.0
 Flask==2.3.2
+Flask-Cors==4.0.0
 flask-restx==1.1.0
 idna==3.4
+importlib-metadata==6.8.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
+jaraco.classes==3.3.0
+jeepney==0.8.0
 Jinja2==3.1.2
 jsonschema==4.17.3
-librus-apix==0.4.0
+keyring==24.3.0
+librus-apix==0.5.1
 lxml==4.9.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.2
+mdurl==0.1.2
+more-itertools==10.1.0
+nh3==0.2.14
+packaging==23.2
+pkginfo==1.9.6
+pluggy==1.3.0
+pycparser==2.21
+Pygments==2.16.1
 pyrsistent==0.19.3
+pytest==7.4.3
 pytz==2023.3
+readme-renderer==42.0
 requests==2.30.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.0
+SecretStorage==3.3.3
 soupsieve==2.4.1
+tomli==2.0.1
+twine==4.0.2
 urllib3==2.0.2
 Werkzeug==2.3.4
+zipp==3.17.0
